ipc/ipdl/test/ipdl/error/PBadNestedManager.ipdl
//error: protocol `PBadNestedManagee' requires more powerful send semantics than its manager `PBadNestedManager' provides

include protocol PBadNestedManagee;

[NestedUpTo=not, ChildProc=any]
async protocol PBadNestedManager {
    manages PBadNestedManagee;
parent:
    async PBadNestedManagee();
};
